--- a/chat-style.css
+++ b/chat-style.css
@@ -8,7 +8,13 @@ body {
   font: 13px Helvetica, Arial;
 }
 
-form {
+#username {
+  background: black;
+  position: fixed;
+  top: 0;
+}
+
+#send {
   background: #000;
   padding: 3px;
   position: fixed;
@@ -16,13 +22,13 @@ form {
   width: 100%;
 }
 
-form input {
+#send input {
   border: 0;
   padding: 10px;
   width: 90%;
   margin-right: .5%;
 }
-form button {
+#send button {
   width: 9%;
   background: rgb(130, 224, 255);
   border: none;
@@ -33,6 +39,8 @@ form button {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  padding-bottom: 40px;
+  padding-top: 20px;
 }
 
 #messages li {
