slight changes to static files, clients can no longer send empty messages or submit empty usernames

--- a/chat-style.css
+++ b/chat-style.css
@@ -9,9 +9,13 @@ body {
 }
 
 #username {
-  background: black;
+  background: white;
   position: fixed;
   top: 0;
+}
+
+#username button {
+  background: rgb(130, 224, 255);
 }
 
 #send {
